--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
 	],
 	"require": {
 		"php": ">=5.6.0",
-		"viraj/cakephp-testdummy": "^1.0",
+		"viraj/cakephp-testdummy": "^1.1",
 		"symfony/dom-crawler": "^3.3",
 		"symfony/css-selector": "^3.3"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "^5.7|^6.0"
+		"phpunit/phpunit": "^5.7|^6.0|^7.0|^8.5"
 	},
 	"autoload": {
 		"psr-4": {
