--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
 	],
 	"require": {
 		"php": ">=7.2.0",
-		"viraj/cakephp-testdummy": "^1.2",
 		"symfony/dom-crawler": "^3.3",
-		"symfony/css-selector": "^3.3"
+		"symfony/css-selector": "^3.3",
+		"viraj/cakephp-testdummy": "^2.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^5.7|^6.0|^7.0|^8.5"
