--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
 	"require": {
 		"php": ">=7.2.0",
 		"symfony/dom-crawler": "^3.3",
-		"symfony/css-selector": "^4.0",
-		"viraj/cakephp-testdummy": "^2.0"
+		"viraj/cakephp-testdummy": "^2.0",
+		"symfony/css-selector": "^4.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^5.7|^6.0|^7.0|^8.5"
